fix: title alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,18 +15,19 @@ body {
 section {
   max-width: 1000px;
   margin: 0 auto;
+  padding: 1rem;
 }
 
 .title {
   background-color: #333;
   color: white;
-  padding: 1rem;
   display: flex;
   align-items: center;
 }
 
 .title-container {
   width: 1000px;
+  padding: 1rem;
   text-align: start;
 }
 
